# qr-detection

./: CMakeLists.txt  main.cpp  qrcode_generator.cpp
tools/: qrcode_generator.cpp
